# CyberCraft

./: .commit.sh  .gitignore  .pre-commit-config.yaml  Makefile  NEWS.md  README.md  Todo.md  cybercraft
.github/workflows/: c-cpp.yml
Documentation/: Automation.md  ConfigFiles.md  gpg-crypt.md  gpg-setup.md  yubicrypt-setup.md
pre-commit_tools/hooks/: pre-commit
scripts/: .gitignore  check_dependencies.sh  distro  file-manager.py  foo  gpggen  install.sh  set_user.sh  yubikeySettings.py
scripts/install/: pre-commit.py  python3.14_setup.sh  yubiCrypt_dependencies.sh
src/: .compile.sh  .cy_config.yaml  .pre-commit-config.yaml  Checking.cc  Checking.hh  Folder-Anonymizer  Makefile  Ploting.cc  cybercraft  cybercraft.cc
src/.headerfiles/: Ploting.hh
src/art/: mascot
src/data_engine/: Cargo.toml  build.sh
src/data_engine/src/: command_runner.rs  decrypt.rs  encrypt.rs  main.rs  rage_encrypt.rs  tree.rs  two.rs
src/pre-commit_tools/hooks/: pre-commit
yubiCrypt/: decrypt.py  encrypt.py  import.py
yubiCrypt/modules/: check.py  extract_identities.py  get_ids.py  yubiCryptLib.py
