[package]
name = "data_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.98"
cmd_lib = "1.9.5"
dirs = "6.0.0"
rand = "0.9.1"
walkdir = "2.5.0"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

