[package]
name = "data_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.0", features = ["full"] }
anyhow = "1.0.98"
cmd_lib = "1.9.5"
dirs = "6.0.0"
rand = "0.9.1"
walkdir = "2.5.0"
shellexpand = "3.1.1"
futures = "0.3.31"
log = "0.4.27"
env_logger = "0.11.8"
clap = "4.5.38"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

